@@ -1,3 +1,8 @@
+Sat Aug 11 01:41:21 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Add image and filelist saving to context menus.
+	* Tidy menus.
+
 Sat Aug 11 01:25:15 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Fixed missing break; in keyevent handler
